# eventor

./: .gitignore  .gitmodules  README.md
backends/django-backend/event_manager/: models.py
backends/django-backend/eventor/: urls.py
backends/fastapi-backend/: Dockerfile  Makefile  README.md  env.example  pyproject.toml  requirements.txt  setenvkey.sh
backends/fastapi-backend/app/: main.py  test_main.py
backends/fastapi-backend/app/core/settings/: app_settings.py
backends/fastapi-backend/app/models/: flyer_storage.py  new_flyer.py  test_flyer_storage.py
backends/fastapi-backend/app/services/flyer_generator/: flyer_maker.py  stable_diffusion.py
django-backend/event_manager/: forms.py  views.py
django-backend/event_manager/migrations/: 0001_initial.py
django-backend/event_manager/templates/: my_events.html
django-backend/eventor_auth/: apps.py  forms.py
eventor/: db.sqlite3  manage.py
eventor/event_manager/: tests.py  views.py
eventor/event_manager/templates/: base.html  event_details.html  new_or_edit_event.html
eventor/eventor/: settings.py  urls.py
fastapi-backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
fastapi-backend/app/: main.py
fastapi-backend/flyer_maker/flyer_generator/: stable_diffusion.py
src/event_manager/: models.py  views.py
src/event_manager/migrations/: 0002_eventmodel_owner.py
src/event_manager/templates/: base.html
src/eventor/: asgi.py  settings.py  urls.py  wsgi.py
src/eventor_auth/: views.py
src/eventor_auth/templates/: account_recovery.html  (+1 more)
src/flyer_maker/: apps.py
(+3 files in other folders)
